@@ -5,11 +5,15 @@
 package io.airbyte.integrations.destination.redshift;
 
 import com.fasterxml.jackson.databind.JsonNode;
-import com.google.common.collect.ImmutableMap;
+import io.airbyte.integrations.base.AirbyteMessageConsumer;
 import io.airbyte.integrations.base.Destination;
 import io.airbyte.integrations.base.IntegrationRunner;
 import io.airbyte.integrations.destination.jdbc.copy.SwitchingDestination;
+import io.airbyte.integrations.destination.redshift.enums.RedshiftDataTmpTableMode;
+import io.airbyte.protocol.models.AirbyteMessage;
+import io.airbyte.protocol.models.ConfiguredAirbyteCatalog;
 import java.util.Map;
+import java.util.function.Consumer;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -25,10 +29,13 @@ import org.slf4j.LoggerFactory;
 public class RedshiftDestination extends SwitchingDestination<RedshiftDestination.DestinationType> {
 
   private static final Logger LOGGER = LoggerFactory.getLogger(RedshiftDestination.class);
+  private static final String USE_SUPER_REDSHIFT_TYPE_PARAMETER = "use_super_redshift_type";
 
   enum DestinationType {
-    INSERT,
-    COPY_S3
+    INSERT_WITH_VARCHAR,
+    INSERT_WITH_SUPER_TMP_TYPE,
+    COPY_S3_WITH_VARCHAR,
+    COPY_S3_WITH_SUPER_TMP_TYPE
   }
 
   public RedshiftDestination() {
@@ -36,23 +43,18 @@ public class RedshiftDestination extends SwitchingDestination<RedshiftDestinatio
   }
 
   public static DestinationType getTypeFromConfig(final JsonNode config) {
-    if (isCopy(config)) {
-      return DestinationType.COPY_S3;
-    } else {
-      return DestinationType.INSERT;
-    }
+    return determineUploadMode(config);
   }
 
   public static Map<DestinationType, Destination> getTypeToDestination() {
-    final RedshiftInsertDestination insertDestination = new RedshiftInsertDestination();
-    final RedshiftCopyS3Destination copyS3Destination = new RedshiftCopyS3Destination();
-
-    return ImmutableMap.of(
-        DestinationType.INSERT, insertDestination,
-        DestinationType.COPY_S3, copyS3Destination);
+    return Map.of(
+        DestinationType.INSERT_WITH_VARCHAR, new RedshiftInsertDestination(RedshiftDataTmpTableMode.VARCHAR),
+        DestinationType.INSERT_WITH_SUPER_TMP_TYPE, new RedshiftInsertDestination(RedshiftDataTmpTableMode.SUPER),
+        DestinationType.COPY_S3_WITH_VARCHAR, new RedshiftCopyS3Destination(RedshiftDataTmpTableMode.VARCHAR),
+        DestinationType.COPY_S3_WITH_SUPER_TMP_TYPE, new RedshiftCopyS3Destination(RedshiftDataTmpTableMode.SUPER));
   }
 
-  public static boolean isCopy(final JsonNode config) {
+  public static DestinationType determineUploadMode(final JsonNode config) {
     final var bucketNode = config.get("s3_bucket_name");
     final var regionNode = config.get("s3_bucket_region");
     final var accessKeyIdNode = config.get("access_key_id");
@@ -63,13 +65,25 @@ public class RedshiftDestination extends SwitchingDestination<RedshiftDestinatio
     final var emptyRegion = regionNode == null || regionNode.asText().equals("");
 
     if (bucketNode == null && emptyRegion && accessKeyIdNode == null && secretAccessKeyNode == null) {
-      return false;
+      return determineTmpTableDatatype(config) == RedshiftDataTmpTableMode.VARCHAR ?
+          DestinationType.INSERT_WITH_VARCHAR :
+          DestinationType.INSERT_WITH_SUPER_TMP_TYPE;
     }
 
     if (bucketNode == null || regionNode == null || accessKeyIdNode == null || secretAccessKeyNode == null) {
       throw new RuntimeException("Error: Partially missing S3 Configuration.");
     }
-    return true;
+    return determineTmpTableDatatype(config) == RedshiftDataTmpTableMode.VARCHAR ?
+        DestinationType.COPY_S3_WITH_VARCHAR :
+        DestinationType.COPY_S3_WITH_SUPER_TMP_TYPE;
+  }
+
+  private static RedshiftDataTmpTableMode determineTmpTableDatatype(JsonNode config) {
+    if (config.get(USE_SUPER_REDSHIFT_TYPE_PARAMETER) != null && !config.get(USE_SUPER_REDSHIFT_TYPE_PARAMETER).isNull() && config.get(
+        USE_SUPER_REDSHIFT_TYPE_PARAMETER).asBoolean()) {
+      return RedshiftDataTmpTableMode.SUPER;
+    }
+    return RedshiftDataTmpTableMode.VARCHAR;
   }
 
   public static void main(final String[] args) throws Exception {
